# fog-chess-back-end

./: .gitignore  CMakeLists.txt  README.md  Server.cpp  Server.h  main.cpp
engine/: Chessboard.cpp  Chessboard.h  Coords.cpp  Coords.h  Figure.cpp  Figure.h  Game.cpp  Game.h
